--- a/index.html
+++ b/index.html
@@ -15,6 +15,8 @@
             <h2></h2>
          </div>
          <button>guess winner</button>
+
+         <h5>© 2025 Himanshu — IPL Winner Predictor Game. All Rights Reserved.</h5>
         <script src="app.js"></script>
     </main>
 </body>
