game name change

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <main>
-        <p>guess <span>IPL</span> winner 2026</p>
+        <p>guess the <span>IPL</span> winner 2026</p>
          <div id="team">
             <h1></h1>
             <h1 id="captain"></h1>
